Add upcoming events with dates list

--- a/src/styles/_custom-bootstrap.scss
+++ b/src/styles/_custom-bootstrap.scss
@@ -1,1 +1,5 @@
+// Core
+$prefix: bs-; // This makes all Bootstrap CSS variables to start with '--bs-' instead of '--app-'.
+
 $primary: slateblue;
+$body-bg: #E9ECF5;
