Use Bootstrap color variables

--- a/src/styles/_custom-bootstrap.scss
+++ b/src/styles/_custom-bootstrap.scss
@@ -1,5 +1,8 @@
 // Core
 $prefix: bs-; // This makes all Bootstrap CSS variables to start with '--bs-' instead of '--app-'.
 
-$primary: slateblue;
+// Colors
+$primary: #01719f;
+$secondary: #D3A92D;
+$gray-200: #E8F1F8;
 $body-bg: #E9ECF5;
