--- a/src/styles/_custom-bootstrap.scss
+++ b/src/styles/_custom-bootstrap.scss
@@ -4,5 +4,6 @@ $prefix: bs-; // This makes all Bootstrap CSS variables to start with '--bs-' in
 // Colors
 $primary: #01719f;
 $secondary: #D3A92D;
+$dark: #575756;
 $gray-200: #E8F1F8;
 $body-bg: #E9ECF5;
