--- a/src/styles/_custom-bootstrap.scss
+++ b/src/styles/_custom-bootstrap.scss
@@ -7,3 +7,14 @@ $secondary: #D3A92D;
 $dark: #575756;
 $gray-200: #E8F1F8;
 $body-bg: #E9ECF5;
+
+:root .toast {
+	--bs-toast-padding-x: 1rem;
+	--bs-toast-bg: var(--bs-dark);
+	--bs-toast-color: white;
+	--bs-toast-max-width: 240px;
+
+	position: fixed;
+	top: 1rem;
+	right: 1rem;
+}
