--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,3 +4,17 @@
 @import './custom-bootstrap.scss';
 
 @import 'bootstrap/scss/bootstrap';
+
+@font-face {
+	font-family: 'Roboto';
+	src: url('/fonts/Roboto-Variable.ttf') format('truetype');
+	font-weight: 100 900;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Anton';
+	src: url('/fonts/Anton-Regular.ttf') format('truetype');
+	font-weight: 100 900;
+	font-style: normal;
+}
