--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -1,10 +1,13 @@
 $prefix: app-;
 
 :root {
+	--#{$prefix}navbar-height: 82px;
+
 	--#{$prefix}primary-light: #d9eaf1;
 	--#{$prefix}color-primary-rgb: 0, 118, 170;
 	--#{$prefix}color-secondary-rgb: 243, 177, 34;
 	--#{$prefix}background-opacity: 0.15;
+
 	--#{$prefix}page-padding-x: min(3rem, 3vw);
 	--#{$prefix}page-margin-x: max(-3rem, -3vw);
 	--#{$prefix}border-today: 2px solid var(--bs-primary);
@@ -17,7 +20,6 @@ html {
 .#{$prefix}dates-row {
 	background-color: var(--bs-gray-200);
 	margin-inline: var(--app-page-margin-x);
-	padding-top: 0.5rem;
 }
 
 .#{$prefix}day-of-the-week {
